<resources>
    <string name="app_name">Agape4Charity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>

    <string name="error_this_is_req">This is a required field.</string>
    <string name="error_not_valid_password">Passwords you entered do not match.</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="re_password">Confirm Password</string>
    <string name="register_note">*Your information will be stored and will not be used for any kind of marketing purpose.</string>
    <string name="error_invalid_phone">Invalid phone number.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_my_list">My charity</string>
    <string name="title_categories">Categories</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>
    <string name="remove">Remove</string>
    <string name="add_note">Add note</string>
    <string name="more_info">More info</string>
    <string name="donation">Total Donations:</string>
    <string name="timeline">Timeline</string>
    <string name="changePw">Change Password</string>
    <string name="donated">Donated</string>
    <string name="add_to_my_charity">Add to my charity</string>
    <string name="donate_to_this">Donate to this</string>
    <string name="title_activity_infor">InforActivity</string>
    <string name="large_text">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="status">status</string>
    <string name="settings">Settings</string>
    <string name="facebook_app_id">2401421566742372</string>
    <string name="more">More</string>
    <string name="dismiss">Dismiss</string>
    <string name="fgtpw">Forgot password ?</string>
    <string name="currentPw">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="updatePassword">Update</string>
    <string name="title_activity_change_password">Update Password</string>
    <string name="title_activity_search">Search</string>
    <string name="updatePw">Update Password</string>
    <string name="empty_list">You have not added any events</string>
    <string name="not_completed_charity">You have not completed any events.</string>
    <string name="changePassword">Change Password</string>
    <string name="help">Logout</string>
    <string name="noEvents">No previous events</string>
</resources>
