<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tech.agape4charity.fragment.SignInFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main__toolbar"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:layout_height="?attr/actionBarSize"

        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <com.tech.agape4charity.widget.TextViewNormal
            android:text="@string/register"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:layout_marginTop="@dimen/high"
                android:layout_marginLeft="@dimen/high"
                android:layout_marginRight="@dimen/high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.tech.agape4charity.widget.EditTextDefault
                    android:id="@+id/etName"
                    android:hint="@string/name"
                    android:inputType="textCapWords|textPersonName"
                    style="@style/EditText" />

                <View style="@style/Separator" />

            </FrameLayout>

            <FrameLayout
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/high"
                android:layout_marginRight="@dimen/high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.tech.agape4charity.widget.EditTextDefault
                    android:id="@+id/etEmail"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    style="@style/EditText" />

                <View style="@style/Separator" />

            </FrameLayout>

            <FrameLayout
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/high"
                android:layout_marginRight="@dimen/high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.tech.agape4charity.widget.EditTextDefault
                    android:id="@+id/etPhone"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    style="@style/EditText" />

                <View style="@style/Separator" />

            </FrameLayout>

            <FrameLayout
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/high"
                android:layout_marginRight="@dimen/high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.tech.agape4charity.widget.EditTextDefault
                    android:id="@+id/etAddress"
                    android:hint="@string/address"
                    android:inputType="textPostalAddress|textCapWords"
                    style="@style/EditText" />

                <View style="@style/Separator" />

            </FrameLayout>

            <FrameLayout
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/high"
                android:layout_marginRight="@dimen/high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.tech.agape4charity.widget.EditTextDefault
                    android:id="@+id/etPassword"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    style="@style/EditText" />

                <View style="@style/Separator" />

            </FrameLayout>

            <FrameLayout
                android:layout_marginTop="@dimen/medium"
                android:layout_marginLeft="@dimen/high"
                android:layout_marginRight="@dimen/high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.tech.agape4charity.widget.EditTextDefault
                    android:id="@+id/etRePassword"
                    android:hint="@string/re_password"
                    android:inputType="textPassword"
                    style="@style/EditText" />

                <View style="@style/Separator" />

            </FrameLayout>

            <com.tech.agape4charity.widget.CustomButton
                android:id="@+id/btnRegister"
                android:text="@string/register"
                android:textColor="@color/textColorButton"
                android:layout_marginLeft="@dimen/high"
                android:layout_marginRight="@dimen/high"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginBottom="@dimen/medium"
                android:background="@drawable/button_login"
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <TextView
                android:text="@string/register_note"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/high"
                android:layout_marginLeft="@dimen/high"
                android:layout_marginRight="@dimen/high"
                android:layout_marginBottom="@dimen/high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
