<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.tech.agape4charity.activity.ChangePasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main__toolbar"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:layout_height="?attr/actionBarSize"

        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <com.tech.agape4charity.widget.TextViewTitle
            android:text="@string/updatePw"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
            android:layout_marginTop="@dimen/high"
            android:layout_marginLeft="@dimen/high"
            android:layout_marginRight="@dimen/high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tech.agape4charity.widget.EditTextDefault
                android:id="@+id/etCurrentPassword"
                android:hint="@string/currentPw"
                android:inputType="textPassword"
                android:textColorHint="@color/button_primary"
                android:textColor="@color/button_primary"
                style="@style/EditText" />

            <View style="@style/SeparatorBlack" />

        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="@dimen/medium"
            android:layout_marginLeft="@dimen/high"
            android:layout_marginRight="@dimen/high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tech.agape4charity.widget.EditTextDefault
                android:id="@+id/etNewPassword"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                android:textColorHint="@color/button_primary"
                android:textColor="@color/button_primary"
                style="@style/EditText" />

            <View style="@style/SeparatorBlack" />

        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="@dimen/high"
            android:layout_marginLeft="@dimen/high"
            android:layout_marginRight="@dimen/high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tech.agape4charity.widget.EditTextDefault
                android:id="@+id/etRePassword"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                android:textColorHint="@color/button_primary"
                android:textColor="@color/button_primary"
                style="@style/EditText" />

            <View style="@style/SeparatorBlack" />

        </FrameLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <com.tech.agape4charity.widget.CustomButton
            android:layout_gravity="bottom"
            android:id="@+id/btnUpdate"
            android:text="@string/updatePassword"
            style="@style/ButtonWhite"
            android:textColor="@color/white"
            android:background="@drawable/button_primary"
             />
    </LinearLayout>



</LinearLayout>
