<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/view_not_logged"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lay_profile_pic_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relativeLayout"
            android:layout_weight="1"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_placeholder"
                app:civ_fill_color="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <com.tech.agape4charity.widget.TextViewTitle
                    android:id="@+id/profileName"
                    android:textSize="24dp"
                    android:layout_marginTop="@dimen/low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Julia Amberson"
                    android:textColor="@color/textPrimary" />

                <com.tech.agape4charity.widget.TextViewNormal
                    android:id="@+id/profileEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="julia@gmail.com"
                    android:textColor="@color/button_primary_disabled" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_more"
                android:layout_width="32dp"
                android:layout_height="34dp"
                android:scaleType="fitXY"
                android:src="@drawable/more"
                android:background="@null"
                android:paddingRight="4dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                />

        </LinearLayout>


        <LinearLayout
            android:padding="@dimen/low"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_selected"
            >
            <com.tech.agape4charity.widget.TextViewNormal
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/textPrimary"
                android:text="@string/timeline" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:animateLayoutChanges="true"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCharityList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvEmptyItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/noEvents"
            android:visibility="gone"
            android:paddingTop="@dimen/medium"
            android:textSize="16sp"
            android:background="@color/white"/>

    </FrameLayout>



    <TextView
        android:visibility="gone"
        android:id="@+id/tvEmptyTimeline"
        android:gravity="center"
        android:text="@string/not_completed_charity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        />


</LinearLayout>
